--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^4.18.2",
     "moment": "^2.29.4",
     "mysql": "^2.18.1",
@@ -22,6 +23,7 @@
     "react-scripts": "5.0.1",
     "react-uuid": "^1.0.3",
     "redux": "^4.2.0",
+    "uuid": "^13.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
