--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -32,3 +32,4 @@ jobs:
           push: true
           tags: jagapathi/home-budget-react:latest
           platforms: linux/amd64,linux/arm64
+          no-cache: true
