--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -30,6 +30,8 @@ jobs:
         with:
           context: .
           push: true
-          tags: jagapathi/home-budget-react:latest
+          tags: |
+            jagapathi/home-budget-react:latest
+            jagapathi/home-budget-react:${{ github.run_number }}
           platforms: linux/amd64,linux/arm64
           no-cache: true
