--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@reduxjs/toolkit": "^2.11.2",
     "@tailwindcss/postcss": "^4.1.18",
     "class-variance-authority": "^0.7.1",
@@ -35,7 +36,7 @@
   "scripts": {
     "start": "webpack serve --mode development",
     "build": "webpack --mode production",
-    "server": "node server.js"
+    "server": "nodemon server.js"
   },
   "eslintConfig": {
     "extends": [
@@ -65,6 +66,7 @@
     "css-loader": "^7.1.3",
     "html-webpack-plugin": "^5.6.6",
     "mini-css-extract-plugin": "^2.10.0",
+    "nodemon": "^3.1.11",
     "npm-check-updates": "^19.3.2",
     "postcss": "^8.5.6",
     "postcss-loader": "^8.2.0",
