--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "express": "^5.2.1",
     "highcharts": "^12.5.0",
     "highcharts-react-official": "^3.2.3",
-    "html2canvas": "^1.4.1",
+    "html-to-image": "^1.11.13",
     "lucide-react": "^0.563.0",
     "mysql": "^2.18.1",
     "react": "^18.2.0",
