--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@google/genai": "^1.40.0",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.8",
@@ -22,6 +23,7 @@
     "highcharts-react-official": "^3.2.3",
     "html-to-image": "^1.11.13",
     "lucide-react": "^0.563.0",
+    "multer": "^2.0.2",
     "mysql": "^2.18.1",
     "react": "^18.2.0",
     "react-day-picker": "^9.13.0",
