--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "clsx": "^2.1.1",
     "cors": "^2.8.6",
     "date-fns": "^4.1.0",
+    "discord.js": "^14.25.1",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "highcharts": "^12.5.0",
@@ -26,6 +27,7 @@
     "lucide-react": "^0.563.0",
     "multer": "^2.0.2",
     "mysql": "^2.18.1",
+    "node-cron": "^4.2.1",
     "react": "^18.2.0",
     "react-day-picker": "^9.13.0",
     "react-dom": "^18.2.0",
