--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,7 @@ DB_PORT=3306
 DB_USER=your_database_user
 DB_PASSWORD=your_database_password
 DB_DATABASE=home_budget
+GEMINI_API_KEY=
+DISCORD_BOT_TOKEN=
+DISCORD_CHANNEL_ID=
+DISCORD_MANAGEMENT_CHANNEL_ID=
